--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -53,7 +53,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home <span class="sr-only">(current)</span></a></li>
+        <li class="active"><a href="/home">Home <span class="sr-only">(current)</span></a></li>
         <li><a href="login">Log in</a></li>
         <li><a href="register">Register</a></li>
         <li><a href="about">About</a></li>
